--- a/CodeAndPepper-Zadanie/WebApi/WebApi.csproj
+++ b/CodeAndPepper-Zadanie/WebApi/WebApi.csproj
@@ -5,10 +5,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.9" />
@@ -16,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\WebApi.DAL\WebApi.DAL.csproj" />
+    <ProjectReference Include="..\WebApi.Services\WebApi.Services.csproj" />
   </ItemGroup>
 
 
